<resources>

	<string name="app_name">Muzei Deezer</string>
	<string name="search_hint">Search Deezer albums</string>

	<!--  -->
	<string name="source_album">Deezer</string>
	<string name="source_album_desc">Covers from Deezer Albums</string>

	<!--  -->
	<string name="action_login">Log In</string>
	<string name="action_logout">Log Out</string>
	<string name="action_edit">Edit</string>
	<string name="action_schedule">Wallpaper update frequency</string>
	<string name="action_delete">Delete</string>

	<!--  -->
	<string name="loading">Loading &#8230; </string>
	<string name="anonymous">Anonymous</string>
	<string name="user_avatar">User Avatar</string>
	<string name="favorite_albums">My favorite albums</string>
	<string name="playing_albums">Last played track</string>
	<string name="edito_albums">Editorial albums</string>
	<string name="custom_albums">Custom albums</string>

	<!--  -->
	<string name="custom_album_empty">No album selected yet</string>
	<string name="custom_album_no_result">No album matching this query</string>

	<!--  -->
	<string name="schedule_1_hour">Every hour</string>
	<string name="schedule_3_hour">Every 3 hours</string>
	<string name="schedule_6_hour">Four times a day</string>
	<string name="schedule_12_hour">Twice a day</string>
	<string name="schedule_24_hour">Once a day</string>

	<!-- Error messages -->
	<string name="deezer_error_during_login">Deezer error during login</string>
	<string name="invalid_credentials">Invalid credentials</string>
	<string name="error_user_info">Unable to fetch user information</string>
	<string name="error_editos_list">Unable to fetch the list of editos</string>
	<string name="error_search_albums">Unable to perform the search</string>

	<!--  -->
	<string name="desc_edito">"Display covers of albums in the week's selection. You can edit the genre of music for the selection. "</string>
	<string name="desc_favorites">"Display covers of albums you have added to favorites on your Deezer account."</string>
	<string name="desc_last_played">"Display the cover of the album of the last track you played. "</string>
	<string name="desc_custom">"Display the covers of albums you pick by hand. "</string>

</resources>